--- a/.gitignore
+++ b/.gitignore
@@ -27,6 +27,11 @@ screenshot.png
 screenshots/
 temp/
 
+# Session data (Screen Narrator)
+sessions/
+session_export_*
+*_descriptions.txt
+
 # OS generated files
 .DS_Store
 .DS_Store?
