--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "node-fetch": "^3.3.2",
     "say": "^0.16.0",
     "screenshot-desktop": "^1.15.0",
+    "sharp": "^0.34.3",
     "sqlite3": "^5.1.6",
     "uuid": "^9.0.1",
     "winston": "^3.11.0"
