--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "type": "module",
   "dependencies": {
     "archiver": "^6.0.2",
+    "crypto-js": "^4.2.0",
     "dotenv": "^16.3.1",
     "node-fetch": "^3.3.2",
     "say": "^0.16.0",
