--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "archiver": "^6.0.2",
     "crypto-js": "^4.2.0",
     "dotenv": "^16.3.1",
+    "loudness": "^0.4.2",
     "node-fetch": "^3.3.2",
     "say": "^0.16.0",
     "screenshot-desktop": "^1.15.0",
