--- a/.gitignore
+++ b/.gitignore
@@ -4,33 +4,23 @@ npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 
+# Build outputs
+dist/
+build/
+*.tgz
+*.tar.gz
+
+# Session data
+sessions/
+*.db
+*.log
+
 # Environment variables
 .env
 .env.local
 .env.development.local
 .env.test.local
 .env.production.local
-
-# Logs
-logs/
-*.log
-queue-watcher.log
-
-# Database files
-queue_log.db
-*.db
-*.sqlite
-*.sqlite3
-
-# Screenshots and temporary files
-screenshot.png
-screenshots/
-temp/
-
-# Session data (Screen Narrator)
-sessions/
-session_export_*
-*_descriptions.txt
 
 # OS generated files
 .DS_Store
@@ -41,12 +31,6 @@ session_export_*
 ehthumbs.db
 Thumbs.db
 
-# Windows
-*.tmp
-*.temp
-Desktop.ini
-$RECYCLE.BIN/
-
 # IDE files
 .vscode/
 .idea/
@@ -54,44 +38,27 @@ $RECYCLE.BIN/
 *.swo
 *~
 
-# Build outputs
-dist/
-build/
-out/
+# Temporary files
+*.tmp
+*.temp
+screenshot.png
 
 # Electron specific
-app/node_modules/
-release/
+.electron/
+electron-builder-cache/
 
-# Runtime data
-pids
-*.pid
-*.seed
-*.pid.lock
+# Windows specific
+*.exe
+*.msi
 
-# Coverage directory used by tools like istanbul
-coverage/
+# macOS specific
+*.dmg
 
-# nyc test coverage
-.nyc_output
+# Linux specific
+*.AppImage
+*.deb
+*.rpm
 
-# Dependency directories
-jspm_packages/
-
-# Optional npm cache directory
-.npm
-
-# Optional eslint cache
-.eslintcache
-
-# Optional REPL history
-.node_repl_history
-
-# Output of 'npm pack'
-*.tgz
-
-# Yarn Integrity file
-.yarn-integrity
-
-# Test files
-test-api.js 
+# User data
+user-data/
+app-data/ 
