--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "afterSign": false,
     "files": [
       "**/*",
+      "sound.wav",
       "!**/node_modules/*/{CHANGELOG.md,README.md,README,readme.md,readme}",
       "!**/node_modules/*/{test,__tests__,tests,powered-test,example,examples}",
       "!**/node_modules/*.d.ts",
